# questfoundry-spec

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-README.md  .pre-commit-config.yaml  AGENTS.md  BATCH_ENRICHMENT_TRACKER.md  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENRICHMENT_SUMMARY.md  GITHUB_WORKFLOWS.md  IMPLEMENTATION_ROADMAP.md  LAYER1_CORRECTIONS.md  LAYER2_AUDIT_PHASE4.md  LAYER2_PLAN.md  LAYER4_PLAN.md  LAYERS_5-7_VISION.md  MIGRATION_CHECKLIST.md  PHASE3_ENRICHMENT_PLAN.md  PHASE3_FINAL_SUMMARY.md  PHASE3_STATUS.md  README.md  README_FEEDBACK.md  README_RESEARCH.md  ROLE_INDEX.md  SECURITY.md  VALIDATION.md  requirements-dev.txt  tmp_fix_manifest.py  tmp_inject_version.py
.claude/: settings.local.json
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
00-north-star/: ACCESSIBILITY_AND_CONTENT_NOTES.md  CANON_WORKFLOWS.md  COLD_SOT_FORMAT.md  EVERGREEN_MANUSCRIPT.md  HOOKS.md  INCIDENT_RESPONSE.md  LAYER6_7_CANON_IMPACT.md  NORTH_STAR.md  PN_PRINCIPLES.md  QUALITY_BARS.md  README.md  ROLE_INDEX.md  (+6 more)
spec-tools/: .markdownlint.json  .prettierignore  AGENTS.md  README.md  pyproject.toml
spec-tools/src/questfoundry_spec_tools/: cli.py  generate_schema_index.py  schema_validator.py  upload_kits.py
spec-tools/validation/: epub_validator.md
tools/: .markdownlint.json  .prettierrc.json  README.md  pyproject.toml
tools/scripts/: build_upload_kits.ps1  build_upload_kits.sh
tools/src/questfoundry_spec_tools/: __init__.py  cli.py  epub_validator.py  instance_validator.py  upload_kits.py
tools/validation/: epub_validator.md
(+539 files in other folders)
