[project]
name = "questfoundry-spec-tools"
version = "0.1.0"
description = "Validation and maintenance tools for the QuestFoundry specification"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.20.0",
]

[project.scripts]
qfspec-validate = "questfoundry_spec_tools.cli:validate_schemas_cli"
qfspec-check-instance = "questfoundry_spec_tools.cli:validate_instance_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.5.0",
]
